# simple-antispam-telegram-bot

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  compose.prod.yml  pyproject.toml
.github/: FUNDING.yml
sastb/: __main__.py
sastb/config/: __init__.py  config.py
sastb/config/models/: default_settings.py  scheduler.py  telegram.py  templates.py
sastb/modules/bot/: __init__.py  app.py
sastb/modules/bot/routes/: __init__.py  bot_member_update.py  confirm_btn.py  member_join.py  member_left.py
sastb/modules/bot/utils/: exceptions.py  kick_user_job_id_generator.py  verify_user_callback.py
sastb/modules/scheduler/: __init__.py  app.py  custom_job_executor.py
sastb/modules/scheduler/routes/: __init__.py  kick_user.py
sastb/utils/: singleton.py
sastb/utils/cli/: __init__.py  app.py  bot.py  scheduler.py  setup_logging.py
