[project]
name = "simple-antispam-telegram-bot"
version = "1.0.0"
description = "Simple Antispam Telegram Bot based on Aiogram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "click>=8.1.8",
    "greenlet>=3.2.1",
    "loguru>=0.7.3",
    "orjson>=3.10.18",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
